<resources>
    <string name="app_name">The Wisdom of Ours</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Id">ID</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="ForgetPW">Forget your password?</string>
    <string name="Username">Username</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Birthday">Birthday</string>
    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="ChangingPW">Changing Password</string>
    <string name="AuthenticationNumber">Authentication number</string>
    <string name="NewPw">New Password</string>
    <string name="Location">Location</string>
    <string name="Seoul">Seoul</string>
    <string name="Zwolle">Zwolle</string>
    <string name="Confirm">Confirm</string>
    <string name="Age">Age</string>
    <string name="Next">Next</string>

</resources>