<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangingPW">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:textColor="#33BFB8B8"/>


    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:foreground="#33FF9800">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangingPW"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="#833A3A"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Username"
            android:textColorHint="#807A7A"
            android:inputType="text"
            android:autofillHints="no"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/PhoneNumber"
            android:textColorHint="#807A7A"
            android:inputType="phone"
            android:autofillHints="no"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/AuthenticationNumber"
            android:textColorHint="#807A7A"
            android:inputType="date"
            android:autofillHints="no"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/NewPw"
            android:textColorHint="#807A7A"
            android:inputType="textPassword"
            android:autofillHints="no"
            />

        <Button
            android:id="@+id/cancel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="400dp"
            android:text="@string/Cancel"
            app:backgroundTint="#CDCBC7"
            android:textColor="#595757"
            />
        <Button
            android:id="@+id/submit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:layout_marginTop="400dp"
            android:layout_marginStart="220dp"
            app:backgroundTint="#F39C12"
            />

    </FrameLayout>
</FrameLayout>
