<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:textColor="#000000"/>


    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:drawableStart="@drawable/outline_account_circle_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Id"
        android:inputType="text"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/Password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="450dp"
        android:drawableStart="@drawable/outline_vpn_key_24"
        android:drawablePadding="10dp"
        android:autofillHints="no"/>


    <Button
        android:id="@+id/login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        app:backgroundTint="#F39C12" />

    <Button
        android:id="@+id/forgetPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        android:text="@string/ForgetPW"
        android:textAllCaps="false"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        android:textStyle="italic"
        app:backgroundTint="#FFFFFF" />
</FrameLayout>

