<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstPageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/loginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="#F39C12" />

    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        android:textStyle="italic"
        app:backgroundTint="#FFFFFF" />


</FrameLayout>
